fix: svg-to-ttf-flutter-icons bin support fixed.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "svg-to-ttf-flutter-icons",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "The program will ttf files & dart codes, and generate a font class.",
   "main": "index.js",
+  "bin": "./bin/svg-to-ttf-flutter-icons",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +16,7 @@
     "fontello-cli": "^0.6.2",
     "oslllo-svg-fixer": "^2.2.0",
     "parse-svg-path": "^0.1.2",
+    "picocolors": "^1.0.0",
     "scale-svg-path": "0.0.1",
     "serialize-svg-path": "^0.1.0",
     "svgo": "^3.0.2",
