--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "svg-to-ttf-flutter-icons",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "The program will ttf files & dart codes, and generate a font class.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/iamriajul/svg-to-ttf-flutter-icons.git"
+  },
   "main": "index.js",
   "bin": "./bin/svg-to-ttf-flutter-icons",
   "scripts": {
